landing page header done

--- a/freelance-landing-page.html
+++ b/freelance-landing-page.html
@@ -13,90 +13,86 @@
     <link rel="stylesheet" href="./css/custom.min.css" />
   </head>
   <body class="light_theme">
-    <section class="hero_section">
-      <div class="header-right-bg position-absolute">
-        <div class="container-xxl">
-          <div class="row">
-            <div class="col">
-              <header
-                class="d-flex justify-content-between align-items-center py-2 py-md-3 py-lg-4"
-              >
-                <div class="alt_header_left d-flex">
-                  <div class="header_logo">
-                    <a href="">
-                      <img
-                        src="./assets/images/freelance-landing-page/alt-logo-white.svg"
-                        alt="logo white"
-                      />
-                    </a>
-                  </div>
-                  <nav class="header_menu d-none d-md-block">
-                    <ul class="m-0 p-0 d-flex">
-                      <li><a href="">About us</a></li>
-                      <li><a href="">FAQ</a></li>
-                      <li><a href="">Blogs</a></li>
-                    </ul>
-                  </nav>
+    <section class="alt_header_section">
+     
+      <!-- header  -->
+      <header class="container-xxl">
+        <div class="row">
+          <div class="col">
+            <div
+              class="d-flex flex-row w-100 align-items-center justify-content-between py-4"
+            >
+              <div class="d-flex align-items-center">
+                <!-- logo  -->
+                <div class="brand_logo">
+                  <a href="./#"
+                    ><img
+                      src="./assets/images/freelance-landing-page/alt-logo-white.svg"
+                      alt="logo white"
+                  /></a>
                 </div>
-                <div class="alt_header_right d-flex">
-                  <div
-                    class="header_search position-relative d-none d-lg-block"
-                  >
-                    <div class="search_icon position-absolute z-1">
-                      <i class="fa-solid fa-magnifying-glass"></i>
-                    </div>
+                <!-- menu  -->
+                <nav class="header_nav d-none d-md-block">
+                  <ul>
+                    <li><a href="/#">About us</a></li>
+                    <li><a href="/#">FAQ</a></li>
+                    <li><a href="/#">Blogs</a></li>
+                  </ul>
+                </nav>
+              </div>
+              <div class="d-flex align-items-center justify-content-end">
+                <!-- search bar -->
+                <div
+                  class="alt_header_search position-relative d-none d-lg-flex"
+                >
+                  <form action="">
                     <input
-                      class="header_search_input position-relative rounded-pill"
+                      class="position-relative"
                       type="text"
                       placeholder="Search"
                     />
-                  </div>
-                  <div class="header_button d-flex gap-2">
-                    <a class="d-none d-lg-flex" href=""
-                      ><button
-                        class="alt-btn-light-link-primary btn rounded-pill"
-                      >
-                        login
-                      </button></a
-                    >
-                    <a href=""
-                      ><button class="alt-btn-light-primary btn rounded-pill">
-                        Sign up
-                      </button></a
-                    >
-                    <span class="btn btn-link d-md-none mobile_menu_btn"
-                      ><i class="fa-solid fa-bars"></i
-                    ></span>
-                  </div>
+                    <button type="submit">
+                      <i class="fas fa-search"></i>
+                    </button>
+                  </form>
                 </div>
-              </header>
+                <!-- buttons  -->
+                <div class="alt_header_button ms-md-2 d-flex gap-2">
+                  <a
+                    href="/#"
+                    class="rounded-pill text-capitalize alt-btn-light-outline-primary d-none d-sm-block"
+                    >login</a
+                  >
+                  <a
+                    href="/#"
+                    class="rounded-pill text-capitalize alt-btn-light-primary"
+                    >Sign up</a
+                  >
+                  <button class="mobile_nav_btn d-md-none">
+                    <i class="fa-solid fa-bars"></i>
+                  </button>
+                </div>
+              </div>
             </div>
           </div>
-          <!-- hero content  -->
+        </div>
+      </header>
+      <!-- hero section  -->
+      <section class="hero_section">
+        <div class="container-xxl">
           <div class="row">
-            <div class="col text-center position-relative">
-              <img
-                src="./assets/images/freelance-landing-page/hero-left.svg"
-                alt=""
-                class="position-absolute top-50 start-0 translate-middle-y hero-image-left d-none d-lg-block"
-              />
-              <img
-                src="./assets/images/freelance-landing-page/hero-right.svg"
-                alt=""
-                class="position-absolute top-50 end-0 translate-middle-y hero-image-right d-none d-lg-block"
-              />
-              <div
-                class="hero_content d-flex flex-column justify-content-center gap-2"
-              >
-                <!-- switch btn -->
-                <div class="toggle-switch">
-                  <input type="radio" id="freelancer" name="toggle" checked />
-                  <label for="freelancer" class="toggle-label"
-                    >Freelancer</label
-                  >
-                  <input type="radio" id="business" name="toggle" />
-                  <label for="business" class="toggle-label">Business</label>
-                </div>
+            <div
+              class="col col-md-8 offset-md-2 justify-content-center text-center"
+            >
+              <!-- switcher  -->
+              <div class="toggle-switch mx-auto">
+                <input type="radio" id="freelancer" name="toggle" checked />
+                <label for="freelancer" class="toggle-label">Freelancer</label>
+                <input type="radio" id="business" name="toggle" />
+                <label for="business" class="toggle-label">Business</label>
+              </div>
+              <!-- title  -->
+              <div class="hero_content">
                 <h1>
                   Uncover great <br />
                   opportunities.
@@ -114,193 +110,46 @@
               </div>
             </div>
           </div>
-          <div class="row">
-            <div class="col col-md-8 offset-md-2">
-              <div class="company-logos text-center">
-                <h2>Join <strong>4,000+ companies</strong> already growing</h2>
-                <div class="">
-                  <img
-                    src="./assets/images/freelance-landing-page/icons/ms.svg"
-                    alt="company logo"
-                    class="img-fluid p-2"
-                  />
-                  <img
-                    src="./assets/images/freelance-landing-page/icons/google.svg"
-                    alt="company logo"
-                    class="img-fluid p-2"
-                  />
-                  <img
-                    src="./assets/images/freelance-landing-page/icons/starbugs.svg"
-                    alt="company logo"
-                    class="img-fluid p-2"
-                  />
-                  <img
-                    src="./assets/images/freelance-landing-page/icons/nike.svg"
-                    alt="company logo"
-                    class="img-fluid p-2"
-                  />
-                  <img
-                    src="./assets/images/freelance-landing-page/icons/cocacola.svg"
-                    alt="company logo"
-                    class="img-fluid p-2"
-                  />
-                  <img
-                    src="./assets/images/freelance-landing-page/icons/slack.svg"
-                    alt="company logo"
-                    class="img-fluid p-2"
-                  />
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
-      </div>
+      </section>
     </section>
-
-    <!-- section  -->
-    <section class="section-grid">
+    <!-- company logos section  -->
+    <section class="company_logo_section">
       <div class="container-xxl">
         <div class="row">
-          <div class="col-12 col-md-4 col-lg-4 mb-4">
-            <div class="grid_content_wrapper position-relative">
-              <div class="grid_content">
-                <div class="grid_icons">
-                  <img
-                    src="./assets/images/freelance-landing-page/grig-icons.svg"
-                    alt="icon"
-                    class="img-fluid"
-                  />
-                </div>
-                <h2>
-                  Get paid on <br />
-                  milestone basis
-                </h2>
-                <p>
-                  Expect regular payments as and when <br />
-                  you deliver the work.
-                </p>
-              </div>
-              <div class="grid_card_image position-absolute bottom-0 end-0">
+          <div class="col col-md-8 offset-md-2">
+            <div class="company_logos_content text-center">
+              <h2>Join <strong>4,000+ companies</strong> already growing</h2>
+              <div class="company_logos">
                 <img
-                  src="./assets/images/freelance-landing-page/grid-img-1.png"
-                  alt=""
-                  class="img-fluid grid_card_image-1"
+                  src="./assets/images/freelance-landing-page/icons/ms.svg"
+                  alt="company logo"
+                  class="img-fluid px-2 py-2 py-md-0"
                 />
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-md-8 col-lg-8 mb-4">
-            <div class="grid_content_wrapper position-relative">
-              <div
-                class="grid_content z-1 ms-5 mb-5 position-absolute bottom-0 start-0"
-              >
-                <div class="grid_icons">
-                  <img
-                    src="./assets/images/freelance-landing-page/grig-icons.svg"
-                    alt="icon"
-                    class="img-fluid"
-                  />
-                </div>
-                <h2>Contests & events</h2>
-                <p>
-                  Get the chance to conduct or participate <br />
-                  in exciting events.
-                </p>
-                <button class="alt-btn-light-primary btn rounded-pill mt-3">
-                  Explore now
-                </button>
-              </div>
-              <div class="grid_card_image grid_card_image_2">
                 <img
-                  src="./assets/images/freelance-landing-page/grid-img-2.png"
-                  alt=""
-                  class="img-fluid grid_card_image-2"
+                  src="./assets/images/freelance-landing-page/icons/google.svg"
+                  alt="company logo"
+                  class="img-fluid px-2 py-2 py-md-0"
                 />
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-md-4 col-lg-4 mb-4">
-            <div class="grid_content_wrapper position-relative">
-              <div class="grid_content z-1">
-                <div class="grid_icons">
-                  <img
-                    src="./assets/images/freelance-landing-page/grig-icons.svg"
-                    alt="icon"
-                    class="img-fluid"
-                  />
-                </div>
-                <h2>Flexible agreements</h2>
-                <p>
-                  Adjust project terms to match <br />
-                  your workflow perfectly.
-                </p>
-              </div>
-              <div
-                class="grid_card_image position-absolute bottom-0 start-50 translate-middle-x"
-              >
                 <img
-                  src="./assets/images/freelance-landing-page/grid-img-3.png"
-                  alt=""
-                  class="img-fluid grid_card_image-3"
+                  src="./assets/images/freelance-landing-page/icons/starbugs.svg"
+                  alt="company logo"
+                  class="img-fluid px-2 py-2 py-md-0"
                 />
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-md-4 col-lg-4 mb-4">
-            <div class="grid_content_wrapper position-relative">
-              <div
-                class="grid_content z-1 ms-5 mb-5 position-absolute bottom-0 start-0"
-              >
-                <div class="grid_icons">
-                  <img
-                    src="./assets/images/freelance-landing-page/grig-icons.svg"
-                    alt="icon"
-                    class="img-fluid"
-                  />
-                </div>
-                <h2>Vibrant network</h2>
-                <p>
-                  Connect with leading companies and <br />
-                  freelancers.
-                </p>
-              </div>
-              <div
-                class="grid_card_image position-absolute top-0 end-0 mt-4 me-4"
-              >
                 <img
-                  src="./assets/images/freelance-landing-page/grid-img-4.png"
-                  alt=""
-                  class="img-fluid grid_card_image-4"
+                  src="./assets/images/freelance-landing-page/icons/nike.svg"
+                  alt="company logo"
+                  class="img-fluid px-2 py-2 py-md-0"
                 />
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-md-4 col-lg-4 mb-4">
-            <div class="grid_content_wrapper position-relative theme-dark">
-              <div class="grid_content">
-                <div class="grid_icons">
-                  <img
-                    src="./assets/images/freelance-landing-page/grig-icons.svg"
-                    alt="icon"
-                    class="img-fluid"
-                  />
-                </div>
-                <h2>
-                  Form your own <br />
-                  unique tribes
-                </h2>
-                <p>
-                  Create blended tribes with shared <br />
-                  expertise.
-                </p>
-              </div>
-              <div
-                class="grid_card_image position-absolute bottom-0 start-50 translate-middle-x"
-              >
                 <img
-                  src="./assets/images/freelance-landing-page/grid-img-5.png"
-                  alt=""
-                  class="img-fluid grid_card_image-5"
+                  src="./assets/images/freelance-landing-page/icons/cocacola.svg"
+                  alt="company logo"
+                  class="img-fluid px-2 py-2 py-md-0"
+                />
+                <img
+                  src="./assets/images/freelance-landing-page/icons/slack.svg"
+                  alt="company logo"
+                  class="img-fluid px-2 py-2 py-md-0"
                 />
               </div>
             </div>
