--- a/freelance-landing-page.html
+++ b/freelance-landing-page.html
@@ -14,7 +14,6 @@
   </head>
   <body class="light_theme">
     <section class="alt_header_section">
-     
       <!-- header  -->
       <header class="container-xxl">
         <div class="row">
@@ -152,6 +151,330 @@
                   class="img-fluid px-2 py-2 py-md-0"
                 />
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- grid section  -->
+    <section class="section_grid">
+      <div class="container-xxl">
+        <div class="row">
+          <div class="col col-md-8 offset-md-2 text-center">
+            <div class="section_title">
+              <h2>Why work on Alt Tribe ?</h2>
+              <p>
+                Alt tribe is the ideal platform to help you connect with top
+                <br />
+                companies and take your career forward.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 col-md-4 col-lg-4 mb-4">
+            <div class="grid_content_wrapper grid_content_img_bg_1">
+              <div class="grid_content">
+                <div class="grid_icon">
+                  <img
+                    src="./assets/images/freelance-landing-page/grig-icons.svg"
+                    alt="icon"
+                    class="img-fluid"
+                  />
+                </div>
+                <h2>
+                  Get paid on <br />
+                  milestone basis
+                </h2>
+                <p>
+                  Expect regular payments as and when <br />
+                  you deliver the work.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-8 col-lg-8 mb-4">
+            <div
+              class="grid_content_wrapper d-flex align-items-end grid_content_img_bg_2"
+            >
+              <div class="grid_content">
+                <div class="grid_icon">
+                  <img
+                    src="./assets/images/freelance-landing-page/grig-icons.svg"
+                    alt="icon"
+                    class="img-fluid"
+                  />
+                </div>
+                <h2>Contests & events</h2>
+                <p>
+                  Get the chance to conduct or participate <br />
+                  in exciting events.
+                </p>
+                <button class="alt-btn-light-primary btn rounded-pill mt-3">
+                  Explore now
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 col-lg-4 mb-4">
+            <div class="grid_content_wrapper grid_content_img_bg_3">
+              <div class="grid_content">
+                <div class="grid_icon">
+                  <img
+                    src="./assets/images/freelance-landing-page/grig-icons.svg"
+                    alt="icon"
+                    class="img-fluid"
+                  />
+                </div>
+                <h2>Flexible agreements</h2>
+                <p>
+                  Adjust project terms to match <br />
+                  your workflow perfectly.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 col-lg-4 mb-4">
+            <div
+              class="grid_content_wrapper d-flex align-items-end grid_content_img_bg_4"
+            >
+              <div class="grid_content">
+                <div class="grid_icon">
+                  <img
+                    src="./assets/images/freelance-landing-page/grig-icons.svg"
+                    alt="icon"
+                    class="img-fluid"
+                  />
+                </div>
+                <h2>Vibrant network</h2>
+                <p>
+                  Connect with leading companies and <br />
+                  freelancers.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 col-lg-4 mb-4">
+            <div class="grid_content_wrapper theme_dark grid_content_img_bg_5">
+              <div class="grid_content">
+                <div class="grid_icon">
+                  <img
+                    src="./assets/images/freelance-landing-page/grig-icons.svg"
+                    alt="icon"
+                    class="img-fluid"
+                  />
+                </div>
+                <h2>
+                  Form your own <br />
+                  unique tribes
+                </h2>
+                <p>
+                  Create blended tribes with shared <br />
+                  expertise.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- freelance section  -->
+    <section class="section_freelance">
+      <div class="container-xxl">
+        <div class="row">
+          <div class="col col-md-8 offset-md-2 text-center">
+            <div class="section_title">
+              <h2>Freelance and grow</h2>
+              <p>
+                Collaborate with top clientele on remarkable projects.
+
+                <br />
+                Earn a wealth of experience along the way.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col col-md-8 offset-md-2">
+            <div class="row align-items-center">
+              <div class="col-12 pt-4 pt-lg-0 col-lg-6 order-2 order-lg-1">
+                <div class="freelance_section_img">
+                  <img
+                    src="./assets/images/freelance-landing-page/freelance-section-img.svg"
+                    alt=""
+                    class="img-fluid mx-auto"
+                  />
+                </div>
+              </div>
+              <div class="col-12 col-lg-6 order-1 order-lg-2">
+                <div class="freelance_content">
+                  <h3>Unlock opportunities with Alt Tribe</h3>
+                  <h5>With Alt Tribe you can</h5>
+                  <ul>
+                    <li>Choose between part time and full time commitment.</li>
+                    <li>
+                      Leverage completed projects to develop your portfolio.
+                    </li>
+                    <li>Earn points to get perks along the way.</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- category section -->
+    <section class="category_section">
+      <div class="container-xxl">
+        <div class="row align-items-center">
+          <div class="col-md-6">
+            <div class="section_title pb-4 pb-md-0">
+              <h2>Freelance and grow</h2>
+              <p>
+                Collaborate with top clientele on remarkable projects.
+
+                <br />
+                Earn a wealth of experience along the way.
+              </p>
+              <a href="/#" class="rounded-pill btn-alt-outline"
+                >What can you do?</a
+              >
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="row gx-0 gy-0">
+              <div
+                class="col-md-6 border-light-subtle border-end border-bottom"
+              >
+                <div class="category_content">
+                  <img
+                    src="./assets/images/freelance-landing-page/icons/category-icon-1.svg"
+                    alt=""
+                  />
+                  <h4>Branding</h4>
+                  <p>Craft compelling brand stories for your clients.</p>
+                  <a href="">Explore more</a>
+                </div>
+              </div>
+              <div
+                class="col-md-6 border-light-subtle border-start border-bottom"
+              >
+                <div class="category_content">
+                  <img
+                    src="./assets/images/freelance-landing-page/icons/category-icon-1.svg"
+                    alt=""
+                  />
+                  <h4>Branding</h4>
+                  <p>Craft compelling brand stories for your clients.</p>
+                  <a href="">Explore more</a>
+                </div>
+              </div>
+              <div class="col-md-6 border-light-subtle border-top border-end">
+                <div class="category_content">
+                  <img
+                    src="./assets/images/freelance-landing-page/icons/category-icon-1.svg"
+                    alt=""
+                  />
+                  <h4>Branding</h4>
+                  <p>Craft compelling brand stories for your clients.</p>
+                  <a href="">Explore more</a>
+                </div>
+              </div>
+              <div class="col-md-6 border-light-subtle border-start border-top">
+                <div class="category_content">
+                  <img
+                    src="./assets/images/freelance-landing-page/icons/category-icon-1.svg"
+                    alt=""
+                  />
+                  <h4>Branding</h4>
+                  <p>Craft compelling brand stories for your clients.</p>
+                  <a href="">Explore more</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- freelance experience section  -->
+    <section class="freelance_experience">
+      <div class="container-xxl">
+        <div class="row">
+          <div class="col col-md-8 offset-md-2">
+            <div class="section_title pb-4 pb-md-0">
+              <h2>Alt Tribe simplifies the freelance experience</h2>
+              <p>
+                Simplify your freelance journey and experience effortless
+                success
+
+                <br />
+                with our user-friendly platform.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row align-items-end gy-3 gy-md-0">
+          <div class="col-12 col-md-3">
+            <span><img src="" alt="" /></span>
+            <div
+              class="freelance_experience_content step_1 d-flex flex-column justify-content-end"
+            >
+              <p>Step 1</p>
+              <h3>Apply for job</h3>
+              <h6>Find suitable projects and express your interest.</h6>
+            </div>
+          </div>
+          <div class="col-12 col-md-3 position-relative">
+            <span
+              ><img
+                class="indicatore_1 d-none d-md-block"
+                src="./assets/images/freelance-landing-page/icons/step-1-icons.svg"
+                alt=""
+            /></span>
+            <div
+              class="freelance_experience_content step_2 d-flex flex-column justify-content-end"
+            >
+              <p>Step 1</p>
+              <h3>Apply for job</h3>
+              <h6>Find suitable projects and express your interest.</h6>
+            </div>
+          </div>
+          <div class="col-12 col-md-3 position-relative">
+            <span
+              ><img
+                class="indicatore_2 d-none d-md-block"
+                src="./assets/images/freelance-landing-page/icons/step-3-icons.svg"
+                alt=""
+            /></span>
+            <div
+              class="freelance_experience_content step_3 d-flex flex-column justify-content-end"
+            >
+              <p>Step 1</p>
+              <h3>Apply for job</h3>
+              <h6>Find suitable projects and express your interest.</h6>
+            </div>
+            <span
+              ><img
+                class="indicatore_3 d-none d-md-block"
+                src="./assets/images/freelance-landing-page/icons/step-2-icons.svg"
+                alt=""
+            /></span>
+          </div>
+          <div class="col-12 col-md-3 position-relative">
+            <span
+              ><img
+                class="indicatore_4 d-none d-md-block"
+                src="./assets/images/freelance-landing-page/icons/step-4-icons.svg"
+                alt=""
+            /></span>
+            <div
+              class="freelance_experience_content step_4 d-flex flex-column justify-content-end"
+            >
+              <p>Step 1</p>
+              <h3>Apply for job</h3>
+              <h6>Find suitable projects and express your interest.</h6>
             </div>
           </div>
         </div>
